Fixed App can blocking text on mobile display

--- a/css/index.css
+++ b/css/index.css
@@ -820,6 +820,11 @@ a {
         max-width: 100%;
     }
     
+    #app-can {
+        position: static;
+        max-width: 100%;
+    }
+
     #sketches {
         min-height: auto;
         height: auto;
@@ -962,6 +967,13 @@ a {
         max-width: 100%;
     }
     
+    #app-can {
+        position: static;
+        max-width: 100%;
+        max-height: 50%;
+        margin: 0 auto;
+    }
+
     #sketches {
         min-height: auto;
         height: auto;
